Changes: N900 application manager data update RevBy: MaxW Details: debian/control file was upadted so the widgetsgallery shows properly in application manager 	+Section: user/development 	+Priority: extra 	+XB-Maemo-Display-Name: Widgets Gallery 	and updated new binary icon - XB-Maemo-Icon-26:

--- a/debian/control
+++ b/debian/control
@@ -102,96 +102,63 @@ Description: Demo applications for MeeGo Touch
  Collection of demo applications for MeeGo Touch
 
 Package: meegotouch-demos-widgetsgallery
-Section: devel
+Section: user/development
+Priority: extra
 Architecture: any
 Depends: ${shlibs:Depends}, meegotouch-demos-widgetsgallery-l10n-engineering-english (= ${Source-Version})
 Suggests: meegotouch-demos-widgetsgallery-l10n-ar, meegotouch-demos-widgetsgallery-l10n-de, meegotouch-demos-widgetsgallery-l10n-en, meegotouch-demos-widgetsgallery-l10n-fi, meegotouch-demos-widgetsgallery-l10n-ur, meegotouch-demos-widgetsgallery-l10n-zh-cn
 Conflicts: dui-demos-widgetsgallery
 Replaces: dui-demos-widgetsgallery
 Description: Demo application for MeeGo Touch
+XB-Maemo-Display-Name: Widgets Gallery
 XB-Maemo-Icon-26:
- iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABmJLR0QA/gD+
- AP7rGNSCAAAACXBIWXMAAABIAAAASABGyWs+AAAACXZwQWcAAABAAAAAQADq
- 8/hgAAANS0lEQVR42uVb228c1Rn/fWdmbe9mL068QIidBEJipSJggyrUkCqU
- oL4RWlQwl96ivvQNVaJP8C80fSQPfaHilhqpQiISfYnKJbXpC4kTUYIRVYMd
- J/GFOOvEe5s5Xx/OZc7MztqbODfEUcYzO3PmnPP9vvt3JsTM+D43casXcKsb
- rfTw8uXL1OlAt3vL5/Opop5KoCacVurzHWuGeE4CESPO4bjQz8SZqenfMPOv
- Aez9LiHBwMdE9ObWzQNvAJD6YH22EpEGgADgzZw/v63RaP6NiB681cSssZ3q
- 7u5+ceOdd/wXQAAgBCBbAHCJP3f+wvZavT4mBJWIBIhIdaTYK7dxY/MPzAxm
- eSnbk338zjvKXwFouCD4zltG7/1avX5YCCp5wgMJgtAggL4z5CsAmCFZgiWV
- arXamwAeQ6QOBIAJiBk9/3/fTP0OwCHf8/Dng3+61bRcl/bc8y+gv78fJOiP
- /Xff/RcANSh1YDcOIABCSvkrAhTHnTY0NISBgQH7e/fu3bearpa17Nu3D08+
- +SQGBweRzWbtcyEIRIQwCEcAZBAZefiJsYiZ9yABwO7du3HgwAEsLy/j0KFD
- mJycRF9f3y0jeHBwEIODg5iamsLExAT6+vowNDSE/fv3Y3l5GYODg+jr68Po
- 6CgmJiaUDSMCMz8CwIOjyUkAkAyNDfEAkMvl8PLLL+O1116L9dm0aRPK5TLm
- 5+extLSEcrmMs2fPolwuAwCWlpZQKBTQaDRQr9ftvWttAwMD2L9/P8bGxjAx
- MQEAmJiYwCuvvIJcLoeFhQUMDQ3hiSeesAC4THZ/tITCzPrQv8fHxwEAJ06c
- sH3MpKYZ4rdt24adO3eiXC6j0WgAAPr7+3HvvfeiXC6jq6sL/f39KBQKa5KA
- 8fFxzM/P48iRI7H71WoVCwsL9joiyniE1rFSJYCZwVLG7h89ehTDw8OpCzp5
- 8iQAYGZmJnZ/ZmYm9d5aW7Vaxauvvtpy36gGAAwPD1umKU8gjXTHYEgCwMwM
- KSVCB4CDBw9iamoKBw8etPcmJyfXTMj1amlref/9962kGnqkoil0QXABYACS
- WUIyQcqwZQJ3otsRgMnJydR1haGElCEkSwBoIgqLY5GgACC++HKySUQQQsAT
- Ap7nASYSBMBgEKs3b0QpIbJXFBkvAsixXUkX7TYGW7KYFdcVABJhGGLn4I51
- UNGgzOfzMikBrMUEUkpIIRAEgZYXBksGCJCS06m/WkSShOjfym0pookIJMhe
- p76XAkMcBKXW2gYEhlbAUYF8Ps+XL1+WygiqOYKgqQfh2EDQvw0w4IRluVqu
- O1wmEKAlUB0qFIcQ1p+vJgUuQ0w+gOgcS4ZavEAYShCRRYyZEYYhZBgiDEOE
- MoQMo2du3HAt5bUkQSQEBBGEJ+AJD57vw7NgCJAQnQOgGRQtiwGdDpsWAyCf
- z/OxsU9hPIHhehiGCIMAiwtzqF6+vAZeX11bVyyhtKEP7PsQnqdCOOaYJHQE
- gcOYZEHET+nuIMeQYYAwCNAMAiwvLeH+Bx7AnRs33nDiZ8+fx+enTmFdqaRU
- XmkGhFBhvFLTteemKYFQdJaSIfU5DJXkbNu+Ax/844NVB37qqafWtLB8voDP
- T51CGIRK9CVDECsrL65fUt42FzDRIJsgItRxQYeoN5vB2lam55FSQoYSUiiv
- BGaI6+h/VwYAURipgwg0mo2OBu6032pNSgmpja2U0mR1NwkA7RJVgKDud8rZ
- NUuAA4CRRBaixfPcYABa3V2z2ewQgM76rdZi86e43usOgOsFojNb1b/ZAERB
- W/K4QQC4XsCdz0zZ6JCwTvt1RL6tUZjS5cp7NlcjIasaQTOUSUZutgTYHIBM
- bO9wyIilveaWdGQ1MFYsidlrB+hmo0MAOuy3OgIUi/xEWkJkwbErj0ntSiCs
- KAHODHYBF87NYOs921YHYI0S8O38nLrQro/QGv+QIxWkgVDrJp0Wt6NnBQBM
- Z/OCKZGTEMj09ODi3Cwuzs2uibhOW6Yni0xXF4SnEiGQSobISoUGAqQSYK0K
- SaLdc6VSoWKxmFoRaiHe6BYRQRAhmy8i051FEDSjbFHq/lHF5OqaKXaQEm+V
- DQpkuruRyWTgeZ7KBr0oPabkFpUzBmSktswJEFKkwF95cVr0hAB834Lh+b6K
- 0KTUVlpGKzHAdUQ8GdulOUw29fU9lQr7GV+D4KmcgASgizZK8FWFighgM54e
- M7KRbOdbFYA0nTFq4AmhroWAMBJgLO811QLU6MbKC1MI8Tz4uh4ghAfP86zY
- B0ETQTPQ4Gs11e/5vpKYqNqXqgpUqVRg1KAzI2hqgrpYQSYsNeUzjhbSTgI4
- 2UcDae6RA0Dl0iJmZ75GCTOx/kEoUa83Udr8Qzz+0/1Yv349AODKlWX854sv
- UFlaQrYnC8/3AWYHArSNIDtzg0mOCWG/NHDDEufFFbiujJQxrMbCm9+VS4uo
- TP8bz931HnpEQ1l+AkIJLNcJy+v3ofz4cwCAWk3tMnmehwd27cKJkxOo1xsQ
- nq4ZWBpiIbSLy+pbY0l3aJTL2AbjgpIS0454c7bvOn5eCIH5ma8xslER7xpW
- ZiBkoOfBP6BWr6WOv3XLVnxx+nTkFq0KwOYRHUhAy7LjQDBi/pZayuPaD2vi
- 3AqtOSspAITwYsQzhyjiLHq8Rkyq9JQKBL8PgeZ8KsDG2Ovd/yijbdkfXNkG
- oPWBIhywuh+JFbe6nBSux66hVcgQr41at6hrlUjOr061Wjr3o246a7TBUEsW
- SQDYxANtAIgygNj9hH1IO0wpOiY/jpjHavtaSpgZTEoiFnAfGtyFbmotqBAB
- tcUpUPbOVOIbjaaTzJk1SX2kMze2OzwyMkKuwYhejh9Shvo6VFtO13Awh6lj
- 9929He9d+AXqsitGuCDAFwB9dQi1Wj31OH/hHIRVT1NIYe2l7AdiDCDuBhXh
- ai7pbIq2M4hxrqvSecs+gY0Oo7DVfnBFBGYBIdjaCpYE9oB8oQAeeASHz5VR
- 5LPo7zlr52wGjGq9iUuVI7jrvj3I5tRXIEEQolKpgAjIZIQqoTm7Qba+CeD0
- 6dM0OTmZ6gUI6guRtrG0qyImBJZ6cGnFP2ltXfHnmAdgFiBiCEFgEpAsQSSQ
- y+WR3zEMoodQF/E9gK4gxIYwRK1WRbVWtQv3PBUxEoAwDHRVWzqSrNae3Dz1
- Xe4rCYhzMiLG5Npxbqv+EdLNRgPnvjmDIFA1wY2bNyOXy9tIL4oDBKRkCCEg
- pQsO250pQQRp9gZJAGCQIHjkw/OdL12sx1HBEhixQqrbFhcXqbe3FyMjIzQ6
- OmqNoP1CNCY2joWPcZ+dmqED2NKlRSwtzOHpZ55Fdt06LF5cxKfHPsHZuXnc
- vWWLjtUFiAmCHEJ1RKgINomNcY9GeoTdMLUJRNxEAogIT9u6IyJcuHCBl5eX
- W9ygrTUZnb6yVMGVpYq1/FGtwe4V22/xDDgX5+bw+5dewsXFRZy/MAsi4JE9
- P8bYRx9i9uw0Ml2ZiDht3dwv0qL9QVdtNOH6WtiEJ+4nI6YoVZSa+9l1eawr
- FHV3gVqtRl9++SUb25dqAyqL36J6aRGP7t2LTtvM9DTyDz4AEKFWr6Mrk7H2
- 4P6HHsbpE5/hkUcf7Ww7y/kewXWblOjTgoBVVljfP37sGMIgQHH9ejCHOHPm
- TOw1H4iPy8yoXbmCR/fuxSbnu8DVWrVaRbFQgCBCb6lkx2o2A9QbDRSKRWwa
- GFjTfl6n77pi/6M9e/Dp+KfIl0ppX4uxQEKZmBnd2RzGPv4YM9PTHS9u/YYN
- mDx9Gt093egtlVAqFdFbKsH3PSxVKuhxPly81tYu+ErT+Xq9jpnpaYx/8gm6
- erJp2WBLKKyjBUKh1AshBMb+NWYtv/3rFB4jr6DOC7Oz2LlrF+64ayOEIFSr
- NczPzWPsn0dRXL8B02+/A5M/uGc4p7Zc1/E9tevvrgumHyNX7MW6QhFO3pq6
- Pe6kzWqAXKGAbD6fINI1erIF+VyxhHffOYztO7ZjYMtWzM3O4tTx4yj39yNf
- LMXC4XhoHBnF1VoMtFYZcarlZI2nsQlxRgOuGzT5k0xMZ7MwIrcbQ0XRNrwE
- M+BnurBlxyAqy8v47PgJ+JkMtu78gSUyHhSZqNCVhpWI66Q5hdKVwbRoiNHR
- 0fgeGPBRciExTtlzdJ9cwkDoyeXQu6EP+UIx9Xm8qkttAFrb4YJiqWb+yOU+
- 0GoDIKV8XQh6LF38nDyfAWkkQgDCJIucsBWJwMYlXjg7Ptfja4/0NUfkScmv
- I2EDYrOasPhnTz/zGRENp8rOKimxyQdWByDOqRsFgNNOvPf3dx92JL4VANPe
- eOvwPUKI40TUm0Z47LdTGU6rB9hJHM5H4Wwr4TcCCGZeJKLhF59/9kzyWdvZ
- 3j48upUZ7wEYThmw5boleUrU4qnN+UYR7bQTRPj5i8+PnEl7uOrMb70z+ltm
- PgDgJysBkSyLtUzkGL2bRPiHRPT6L18Y+etKna55BYk02pzbbdwnPY29l9TJ
- m93WzAIHiOR4abuF9vpWE37dAGgDRNt2uxBuAfi+//f5/wPU9rsHuy4mRgAA
- ACV0RVh0Y3JlYXRlLWRhdGUAMjAxMC0wMi0xMVQxNjoyMzozNCswMjowMBpA
- zzsAAAAldEVYdG1vZGlmeS1kYXRlADIwMTAtMDItMTFUMTY6MjM6MzQrMDI6
- MDBF8bkPAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAA
- AABJRU5ErkJggg==
+ iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABHNCSVQICAgIfAhk
+ iAAAAAlwSFlzAAAN1wAADdcBQiibeAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3Nj
+ YXBlLm9yZ5vuPBoAAAgjSURBVGiB1ZlbbFTHGcd/35yzx7sO5rIGzC0ESBsg0HAr
+ 90hI7UODSgUCqYgoaqKqUXlJRdJKRFR9SRspvBQq9S3KC01JUqUOVXpJKvUlBcIl
+ BgwYG7Cx43KxDWub9WV3z236sHvWu16vvWvsJv1Ln+acs3PO/P8z3zfzzaxorfl/
+ hjkZHz26TxaZhnHcE7Ve+X4Mkbdfedf51WS0pSbjo4ZhHF/05Dc3bt2y1fz2xs01
+ Vrjy1SPPy7bJaGvCBRz5oUQ1sm7e3LlqsOMKkoqxYN7cx0xRP57otgAkiIGjb726
+ KGxWHHZdbzdaT4prPTJEXNM0apNu6uCB14+0QU4MhM2Kw0tXrNzz9KrVRigU+so4
+ jgbHccxr9Zf2XG+4CrAXcgS4rrd7xao1huv04dr+V8VxVIgoVqxaYzTU1+8Ong25
+ itamGTJxHpm8ZrJmZq09DNMk18XN/AoQxMSJ9z+aHBbjxM69u9IXw3onP1i1Jndh
+ O/wPd9KJlYKD280sL80oAjT5Ar5OyAoYRq+oC00mLFNYvjDChqVTATh3PU5jewLb
+ Ld52llc5LmSaxgRRzsfuZ6tZ8dR8Nq5bB8DCujoabtzhw5Oxou+My4Ui4QoAnlkU
+ ZtViC8XETK+WZbHjue0YRrqDdjy3nZ7YMfZvrwbAR1HfanO5LZl5wy7RhTIiApGR
+ SFrA6sVhdv7g+8ypmfPI5K82XKXrfmeWPIBhGCxcuJDZs2pYuWIlHZ0dyMd/42Zn
+ wNYenwsFI3CjA/7y8V8RvEcWAOkR8DwvK8LzPNrb22lubub056fQGNzokGz70Fei
+ CxUIsAD4T2/aYGJSjE1LNH//9FPWr10DwPkLF+nuF87cCufVi+TcBp4xqgtlVOR8
+ oKLg5/HC83xiPQ+ZVT2Dqx2a+/0PuHvvEwDaYgad/RVEwlL0/aGOLWcEIhMjQGu4
+ cq2F/oEEVijE3DnV9DhhejqG6lhjNDUUxOOIgUdFS+sd+gcSALTf7WLB/FlYRTJe
+ 7WtEFY7EUAzko3AWGkHAVDNOdagb7Y+cWogyiTlR4u7Ugt96H/bz5e2hrvZcj9Yv
+ O1i98hsFdQcTSc5fagJgyRNzmT93FkqpQEGa/GgjUOhC6SCupps9u3YRjVaPKKC7
+ O8afT5zACc2k/kozNbOjzKmJon3N5WstBYF3+24XC+bN5PH5s7PPHnTHOXXmCrbj
+ AFDf0EJL213Wr1kGVcVdKH9LmREQVIqEK4iEK9C+y4wZUV588SV6enoAiMfjvPba
+ zzl06JdEo9Vo3+VeZ4ybrbf5/HwDA4NJLl1tId43MKLouvrrNLfepb8/QUNTG5+d
+ rs+SD9A/kODU2Ssjdm6AklyIQRARzp49xwcf/ImXX/4Je/fuo66ujo8+qs3WP3km
+ 3ZjreXzyr3P4fvGV23E8Ll6+AaS/DRolGd/PljqzVnilBfFwlfc607nJwky8bdy4
+ gWPH/kA4HObs2bO8+eZv2Lp1S7b+hrXL0VojgGWZuI6Hr4FsTKZvBA0iGIaBoQTH
+ 8fIXqJxLUQq4XnQlHuZC+RlpvG8gzwV27NhBU1MTb7zxa7Zt28b+/T/Nez1Y+AzT
+ wDRNQlYI27ZJJJIZS6XLpI2IYIVMDMOgwgohCKmUw+BgksFEksFkCsd1s4MRdO4Y
+ s1D+CMT7BtMX0XSxa9dO3nvvfR48uM8777ydGfoh9PWnp0rP80mlnGwP2ikH103P
+ YIJQWRnGtl1sO39WU0rwPEFEMAwFGVGBgNyyiID8XCPb+6Lo7o4RjVZTW/shw9Hd
+ HQNRRQMWNI7r4XkelhViMJEsUq84xpXMBYQutpro2lqkSDqtUVxqc4n3jU3Mcca3
+ TS1tIRsm4GHGhb7ogy/SEwbFs5XJxVAyN5YL5VRIpez/CbmxYebwKsOFDm7/+pww
+ lripHxKw+TtbKMQoG/4yzwLKPToYe0MjuK7rmiIK3x9t51VC0yWyK0+ERikD13FB
+ yM4EWQFKGbUtjY17lixdZpih0VynjGYnuKrrurQ0NXpKGdn8JcvU9u2Drc03abnR
+ tBs9Of/cPDIEVymj1vbtg9lHpR5kHX3e0Fs3rUOpyT16932HU2fqOHDcK2nGLqun
+ lQox0NU4PmYl4rHZy8uqX5YA33fKbqBc+L4zdqUclCxACZ2nztTVlM1oHFBCZ6l1
+ S46BXPzuBTO+acOmKjfeRqT6Kf59+jNHaW/mK+/qeEnv7zPeWrT4iV/MqZ5iiDJp
+ vxtL3b5z+9CB495vy+VS9r+Uv/+RLDaNkBkKhUAUg4kBRNP1sz/iiUiViEwTkeki
+ EhWR6oxFM8+miUhV3JaLD+N9A4ZViWcPUDW1qsI05LvlcoESXEhEDMAK7PXt6ntP
+ PznV95wBjFAlvf19DCRpBJYBRsbSyfxQ7qcz5gPeiQte70vPxsMqVInv3KFqygI8
+ zSYRmQc4gB2Y1nrU88wRBWRIVwwzC6iwQmybPn1qxHeSGNYUejs6Uu0x3QQERxZj
+ TX/6Qhv6hc1eKpVKWogiXFmJiFH1zHxv+eU7dAKpjICUiKQy96mRxBS4kIiogOww
+ CwORqohssBRKKmbgG2F6env8W13+jQxxlWNGpoNMhkYlMEmk9M3e7geEpi3CsVOE
+ LdP51uNqLRDJtFXQgRlueSgYAa21LyL2CD2ZzrZ9Yo3NrTU0twKI69J9soVmhtxk
+ zBEAaO7kn5XhW8tovgWgRaOVoh9IkDMCOWZrrQt2VGPOQsNjgPQRdWAm+b1cUgzk
+ mJtjTo6VHAPjmkYzwgKXMYaVAfmgDAT4OWUgJFvqcRL5LxGrI3FXgxkMAAAAAElF
+ TkSuQmCC
 
 Package: meegotouch-demos-widgetsgallery-dbg
 Section: devel
