New: Extended orientation settings
RevBy: Tomas Junnonen
Details: This commit covers 2 tasks:
- Command line option to start applications in fixed orientation. That was requested for development/testing purposes.
- New options in device.conf that describe allowed orientations for device in different keyboard states.
(NOTE: You need to at least run "make setup" or "make install "to install the new device.conf file)

--- a/src/data/devices.conf
+++ b/src/data/devices.conf
@@ -4,34 +4,44 @@ resolutionY=480
 ppiX=261
 ppiY=261
 showStatusBar=true
+allowedOrientationsOnKeyboardOpen = 0
+allowedOrientationsOnKeyboardClosed = 270
 
 [N900]
 resolutionX=800
 resolutionY=480
 ppiX=261
 ppiY=261
-showStatusBar=false	
+showStatusBar=false
+allowedOrientationsOnKeyboardOpen= 0
+allowedOrientationsOnKeyboardClosed = 270
 
 [N95]
 resolutionX=240
 resolutionY=320
 ppiX=153
 ppiY=153
-showStatusBar=false	
+showStatusBar=false
+allowedOrientationsOnKeyboardOpen = 270
+allowedOrientationsOnKeyboardClosed = 0
 
 [Pineapple]
 resolutionX=480
 resolutionY=320
 ppiX=163
 ppiY=163
-showStatusBar=false	
+showStatusBar=false
+allowedOrientationsOnKeyboardOpen = 0
+allowedOrientationsOnKeyboardClosed = 270
 
 [N95i]
 resolutionX=240
 resolutionY=800
 ppiX=152
 ppiY=152
-showStatusBar=false	
+showStatusBar=false
+allowedOrientationsOnKeyboardOpen = 270
+allowedOrientationsOnKeyboardClosed = 0
 
 [QVGAL]
 resolutionX=320
@@ -39,11 +49,15 @@ resolutionY=240
 ppiX=152
 ppiY=152
 showStatusBar=true
+allowedOrientationsOnKeyboardOpen= 0
+allowedOrientationsOnKeyboardClosed = 270
 
 [N97]
 resolutionX=640
 resolutionY=360
 ppiX=209
 ppiY=209
-showStatusBar=false	
+showStatusBar=false
+allowedOrientationsOnKeyboardOpen= 0
+allowedOrientationsOnKeyboardClosed = 270
 
