Changes: add some stuff to .gitignore
RevBy: Max Waterman, Holger Schröder, Bernd Lamecker

--- a/tests/ft_mservicefwgen/.gitignore
+++ b/tests/ft_mservicefwgen/.gitignore
@@ -1,4 +1,6 @@
 ft_mservicefwgen
+qrc_correctFiles.cpp
+qrc_xmlFiles.cpp
 fakegalleryinterfaceproxy.h
 fakegalleryinterfaceproxy.cpp
 fakegalleryinterface.h
