Changes: add some stuff to .gitignore
RevBy: Bernd Lamecker, John Tapsell

--- a/demos/qtstyleorientation/.gitignore
+++ b/demos/qtstyleorientation/.gitignore
@@ -1,4 +1,3 @@
-qtstyleexample
-ui_MainWindow.h
+qtstyleorientation
 qrc_res.cpp
-com.nokia.qtstyleexample.service
+com.nokia.qtstyleorientation.service
