Fixes: MB#4014 - prefix of pc files are statically set to /usr
By: Halton Huo
RevBy: Tomas Junnonen
Details: The configure script now substitutes the paths in the pc
files according the specified prefix.

--- a/src/data/meegotouch.pc.in
+++ b/src/data/meegotouch.pc.in
@@ -1,4 +1,4 @@
-prefix=/usr
+prefix=@@M_UNIX_INSTALL_PREFIX@@
 exec_prefix=${prefix}
 libdir=${exec_prefix}/lib
 includedir=${prefix}/include/meegotouch
