--- a/src/data/meegotouchcore.pc.in
+++ b/src/data/meegotouchcore.pc.in
@@ -1,4 +1,4 @@
-prefix=/usr
+prefix=@@M_UNIX_INSTALL_PREFIX@@
 exec_prefix=${prefix}
 libdir=${exec_prefix}/lib
 includedir=${prefix}/include/meegotouch
