Changes: Refactoring of device configuration RevBy: Tomas Junnonen
Details: This commit is preparing libmeegotouch for variation packages.
Following things had been added/changed:
- separate config file for each device,
- gconf key to point selected file,
- autodetection of parameters in case file is not loaded.

--- a/mkspecs/features/meegotouch_defines.prf.in
+++ b/mkspecs/features/meegotouch_defines.prf.in
@@ -58,6 +58,8 @@ unix|win32 {
 
     M_SHADER_SOURCE_DIR = $$M_INSTALL_DATA/meegotouch/shaders
     M_SHADER_BINARY_DIR = $$M_INSTALL_LOCALSTATE/cache/meegotouch/shaders
+
+    M_TARGETS_CONF_DIR = $$M_INSTALL_DATA/meegotouch/targets
 }
 
 mac {
@@ -83,6 +85,8 @@ mac {
 
     M_SHADER_SOURCE_DIR = $$M_INSTALL_DATA/meegotouch/shaders
     M_SHADER_BINARY_DIR = $$M_INSTALL_LOCALSTATE/cache/meegotouch/shaders
+
+    M_TARGETS_CONF_DIR = $$M_INSTALL_DATA/meegotouch/targets
 }
 
 win32 {
