Changes: desktop files OnlyShowIn filter extended for Hendset and Fremantle managers

--- a/demos/widgetsgallery/widgetsgallery.desktop
+++ b/demos/widgetsgallery/widgetsgallery.desktop
@@ -4,4 +4,4 @@ Name=Widgets Gallery
 Icon=icon-l-widgetsgallery
 Exec=widgetsgallery
 X-Maemo-Service=com.nokia.widgetsgallery
-OnlyShowIn=X-MeeGo;GNOME;
+OnlyShowIn=X-MeeGo;GNOME;X-MEEGO-HS;
