--- a/demos/qtstyleorientation/com.nokia.qtstyleorientation.service.in
+++ b/demos/qtstyleorientation/com.nokia.qtstyleorientation.service.in
@@ -1,3 +1,3 @@
 [D-BUS Service]
-Name=com.nokia.qtstyleexample
-Exec=@M_INSTALL_BIN@/qtstyleexample -style iqs
+Name=com.nokia.qtstyleorientation
+Exec=@M_INSTALL_BIN@/qtstyleorientation
