Changes: Update version for pkg-config from configure
RevBy: Tomas Junonnen
Details: Version for pkg-config was updated manualy so we want to have it the same as runtime version M_VERSION and in .prf files

--- a/src/data/meegotouchsettings.pc.in
+++ b/src/data/meegotouchsettings.pc.in
@@ -5,7 +5,7 @@ includedir=${prefix}/include/meegotouch
 
 Name: meegotouchsettings
 Description: MeeGo Touch UI Framework settings module
-Version: 0.20.11
+Version: @@M_VERSION@@
 Requires: QtGui
 Cflags: -I${includedir}
 Libs: -L${libdir} -lmeegotouchcore -lmeegotouchsettings
