--- a/src/data/meegotouch.pc.in
+++ b/src/data/meegotouch.pc.in
@@ -5,7 +5,7 @@ includedir=${prefix}/include/meegotouch
 
 Name: meegotouch
 Description: MeeGo Touch UI Framework
-Version: 0.20.11
+Version: @@M_VERSION@@
 Requires: QtGui
 Cflags: -I${includedir}
 Libs: -L${libdir} -lmeegotouchcore -lmeegotouchsettings -lmeegotouchextensions
