--- a/src/data/meegotouchcore.pc.in
+++ b/src/data/meegotouchcore.pc.in
@@ -5,7 +5,7 @@ includedir=${prefix}/include/meegotouch
 
 Name: meegotouchcore
 Description: MeeGo Touch UI Framework core module
-Version: 0.20.11
+Version: @@M_VERSION@@
 Requires: QtGui
 Cflags: -I${includedir}
 Libs: -L${libdir} -lmeegotouchcore
