Changes: replace duitestrunner dep by meegotesttunner
RevBy: TrustMe
Details: duitestrunner does not exist in the repos any more,
so this change is needed to be able to install the
meegotouch-demos-widgetsgallery-tests .deb package.

--- a/debian/control
+++ b/debian/control
@@ -172,7 +172,7 @@ Description: Demo application for MeeGo Touch
 Package: meegotouch-demos-widgetsgallery-tests
 Section: devel
 Architecture: any
-Depends: ${shlibs:Depends}, duitestrunner, meegotouch-demos-widgetsgallery (= ${Source-Version})
+Depends: ${shlibs:Depends}, meegotestrunner, meegotouch-demos-widgetsgallery (= ${Source-Version})
 Description: Demo application for MeeGo Touch
 
 Package: meegotouch-demos-plainqt
