New: items to debian/.gitignore
RevBy: Pekka Vuorela

--- a/debian/.gitignore
+++ b/debian/.gitignore
@@ -48,3 +48,5 @@ meegotouch-dev-tools-dbg
 meegotouch-im-context
 meegotouch-qt-style
 meegotouch-qt-style-dbg
+meegotouch-examples
+meegotouch-examples-dbg
