Fixes: MRichTextEdit toolbar file location
RevBy: Pekka Vuorela
Details: the path was hardwired so the file could not be found if a
non-default prefix was used to build the library.

--- a/mkspecs/features/meegotouch_defines.prf.in
+++ b/mkspecs/features/meegotouch_defines.prf.in
@@ -60,6 +60,8 @@ unix|win32 {
     M_SHADER_BINARY_DIR = $$M_INSTALL_LOCALSTATE/cache/meegotouch/shaders
 
     M_TARGETS_CONF_DIR = $$M_INSTALL_DATA/meegotouch/targets
+
+    M_IM_TOOLBARS_DIR = $$M_INSTALL_DATA/meegotouch/imtoolbars
 }
 
 mac {
@@ -87,6 +89,8 @@ mac {
     M_SHADER_BINARY_DIR = $$M_INSTALL_LOCALSTATE/cache/meegotouch/shaders
 
     M_TARGETS_CONF_DIR = $$M_INSTALL_DATA/meegotouch/targets
+
+    M_IM_TOOLBARS_DIR = $$M_INSTALL_DATA/meegotouch/imtoolbars
 }
 
 win32 {
