Changes: remove "d" lib suffix for debug libs
RevBy: Armin Berres
Details: needed so that linking on windows
works.

--- a/mkspecs/features/meegotouch_defines.prf.in
+++ b/mkspecs/features/meegotouch_defines.prf.in
@@ -112,11 +112,12 @@ win32 {
 defineReplace(mAddLibrary) {
     LIBRARY_NAME = $$1
     win32 {
-        CONFIG(debug, debug|release) {
-            return ("-l"$${LIBRARY_NAME}d$${M_MAJOR_VERSION})
-        } else {
-            return ("-l"$${LIBRARY_NAME}$${M_MAJOR_VERSION})
-        }
+#        CONFIG(debug, debug|release) {
+#            return ("-l"$${LIBRARY_NAME}d$${M_MAJOR_VERSION})
+#        } else {
+#            return ("-l"$${LIBRARY_NAME}$${M_MAJOR_VERSION})
+#        }
+         return ("-l"$${LIBRARY_NAME}$${M_MAJOR_VERSION})
     }
 
     return (-l$$LIBRARY_NAME)
