Changes: Enable meego graphics system per default
RevBy: TrustMe

Details: Changed DEB_BUILD_OPTION to nomeegographicssystem.
If nothing is specified, meego graphics system will be used per default

--- a/debian/rules
+++ b/debian/rules
@@ -69,8 +69,9 @@ else
      MAKEDOCS = 0
 endif
 
+# Option to disable usage of meegographics system
 ifeq ($(DEB_BUILD_ARCH),armel)
-    ifneq (,$(findstring meegographicssystem,$(DEB_BUILD_OPTIONS)))
+    ifeq (,$(findstring nomeegographicssystem,$(DEB_BUILD_OPTIONS)))
          OPTIONS += -meegographicssystem
     endif
 endif
