Changes: release 0.20.60 with  meegographicssystem disable RevBy: Adrian Yanes

--- a/debian/rules
+++ b/debian/rules
@@ -70,11 +70,11 @@ else
 endif
 
 # Option to disable usage of meegographics system
-ifeq ($(DEB_BUILD_ARCH),armel)
-    ifeq (,$(findstring nomeegographicssystem,$(DEB_BUILD_OPTIONS)))
-         OPTIONS += -meegographicssystem
-    endif
-endif
+#ifeq ($(DEB_BUILD_ARCH),armel)
+#    ifeq (,$(findstring nomeegographicssystem,$(DEB_BUILD_OPTIONS)))
+#         OPTIONS += -meegographicssystem
+#    endif
+#endif
 
 # Don't build documentation by setting DEB_BUILD_OPTION=nodocs,...
 ifneq (,$(findstring nodocs,$(DEB_BUILD_OPTIONS)))
