Fixes: BMC#10742 - duihome picking wrong size on landscape displays RevBy:TrustMe Details: Since there is ongoing change with XOrg rotation, it is better to get the X and Y size from XOrg settings - it works with or without rotation.          Also the statusbar should be by default shown.

--- a/src/data/targets/nCDK.conf
+++ b/src/data/targets/nCDK.conf
@@ -1,6 +1,6 @@
 [resolution]
-X=480
-Y=864
+X=autodetect
+Y=autodetect
 [ppi]
 X=256
 Y=256
@@ -8,4 +8,4 @@ Y=256
 keyboardOpen=270
 keyboardClosed=0,180,270
 [other]
-showStatusBar=false
+showStatusBar=true
